[package]
name = "rookie"
version = "0.1.0"
edition = "2021"
description = "Load cookie from your web browsers"
license-file = "MIT-LICENSE.txt"
homepage = "https://github.com/thewh1teagle/rookie"
documentation = "https://github.com/thewh1teagle/rookie"
repository = "https://github.com/thewh1teagle/rookie"
readme = "README.md"
keywords = ["windows", "winapi", "cookies", "rust"]

[lib]
name = "rookie"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "bin/main.rs"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.21.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rust-ini = "0.19.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
windows = { version = "0.51.1", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }
