[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
clap = { version = "4.4.6", features = ["derive"] }
pretty_env_logger = "0.5.0"
rookie = { path = "../rookie-rs" }
serde_json = "1.0.107"
