[package]
name = "rookie"
version = "0.5.2-beta.0"
edition = "2021"
description = "Load cookie from your web browsers"
license-file = "MIT-LICENSE.txt"
homepage = "https://crates.io/crates/rookie"
documentation = "https://docs.rs/rookie/"
repository = "https://github.com/thewh1teagle/rookie"
readme = "../README.md"
keywords = ["windows", "cookies", "rust", "web"]

[lib]
name = "rookie"
path = "src/lib.rs"


[dependencies]
indoc = "2.0.5"
aes = "0.8"
aes-gcm = "0.10"
byteorder = "1"
cbc = "0.1"
eyre = { version = "0.6.12" }
glob = "0.3"
log = "0.4"
lz4_flex = "0.11"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
zvariant = "3"

[features]
default = []
pyo3 = ["eyre/pyo3"]

[target.'cfg(unix)'.dependencies]
pbkdf2 = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3"

[target.'cfg(target_os = "macos")'.dependencies]
pbkdf2 = "0.12"
sha1 = "0.10"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
libesedb = "0.2"
rawcopy-rs-next = "0.1.3"
privilege = "0.3.0"
rand = "0.8.5"
windows = { version = "0.51", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_RestartManager",
] }

[[example]]
name = "simple"
path = "../examples/rust/simple.rs"
