[package]
name = "rookie"
version = "0.5.6"
edition = "2021"
description = "Load cookie from your web browsers"
license-file = "../MIT-LICENSE.txt"
homepage = "https://crates.io/crates/rookie"
documentation = "https://docs.rs/rookie/"
repository = "https://github.com/thewh1teagle/rookie"
readme = "../README.md"
keywords = ["windows", "cookies", "rust", "web"]

[lib]
name = "rookie"
path = "src/lib.rs"


[dependencies]
indoc = "2.0.5"
aes = "0.8"
aes-gcm = "0.10"
cbc = "0.1"
eyre = { version = "0.6.12" }
glob = "0.3"
log = "0.4"
lz4_flex = "0.11"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-ini = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
url = "2"
rand = "0.8.5"
once_cell = "1.20.2"

[dev-dependencies]
tracing-subscriber = "0.3.18"

[features]
default = ["appbound"]
pyo3 = ["eyre/pyo3"]
appbound = []

[target.'cfg(unix)'.dependencies]
pbkdf2 = "0.12"
sha1 = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "3"
zvariant = "3"

[target.'cfg(target_os = "macos")'.dependencies]
pbkdf2 = "0.12"
sha1 = "0.10"
byteorder = "1"

[target.'cfg(windows)'.dependencies]
base64 = "0.22"
libesedb = "0.2"
rawcopy-rs-next = "0.1.3"
privilege = "0.3.0"
windows = { version = "0.51", features = [
    "Wdk",
    "Wdk_System",
    "Wdk_System_SystemServices",
    "Win32_Security_Cryptography",
    "Win32_Security",
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_RestartManager",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[[example]]
name = "simple"
path = "../examples/rust/simple.rs"

include = ["src/**/*", "Cargo.toml", "Cargo.lock"]
