[package]
edition = "2021"
name = "thewh1teagle_rookie"
version = "0.5.3-beta.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
rookie = { path = "../../rookie-rs", version = "0.5.3-beta.0" }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
