[package]
name = "rookiepy"
version = "0.3.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rookiepy"
crate-type = ["cdylib"]

[dependencies]
cfg-if = "1.0.0"
pyo3 = "0.19.0"
pyo3-log = "0.9.0"
rookie = { path = "../../rookie-rs" }
