[package]
name = "rookiepy"
version = "0.5.3-beta.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rookiepy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.3"
pyo3-log = "0.9.0"
rookie = { path = "../../rookie-rs", version = "0.5.3-beta.0", features = [
  "pyo3",
] }
