[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rookiepy"
description = "Load cookies from any browser on any platform"

requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/thewh1teagle/rookie"
Documentation = "https://github.com/thewh1teagle/rookie/blob/main/docs/Python.md"
Repository = "https://github.com/thewh1teagle/rookie"
Issues = "https://github.com/thewh1teagle/rookie/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
