[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[project]
name = "rookiepy"
description = "Load cookies from any browser on any platform"
license = "MIT"
authors = [
    {name = "thewh1teagle"},
]

requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Internet :: WWW/HTTP :: Session",
]

[project.urls]
Homepage = "https://github.com/thewh1teagle/rookie"
Documentation = "https://github.com/thewh1teagle/rookie/blob/main/docs/Python.md"
Repository = "https://github.com/thewh1teagle/rookie"
Issues = "https://github.com/thewh1teagle/rookie/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
