[package]
name = "http"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
regex = "1.9.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
rookie = { path = "../../../rookie-rs", version = "0.5.3-beta.0" }
