[package]
name = "logging"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.11.3", features = ["color"] }
rookie = { path = "../../../rookie-rs", version = "0.5.3-beta.0" }
